[tool.poetry]
name = "pretty-print-confusion-matrix"
version = "0.1.0"
description = "Plot a pretty confusion matrix with Seaborn"
authors = ["Your Name <you@example.com>"]
packages = [
    {include = "pretty_print_confusion_matrix"},
]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.0"
numpy = "^1.20.3"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"
scikit-learn = "^0.24.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
